--- a/src/app/components/moderator/room-moderator-page/room-moderator-page.component.scss
+++ b/src/app/components/moderator/room-moderator-page/room-moderator-page.component.scss
@@ -102,10 +102,12 @@ mat-card-header {
 mat-card-title {
   height: 40%;
   min-width: 200px;
+  color: var(--surface)!important;
 }
 
 mat-card-subtitle {
   height: 30%;
+  color: var(--surface)!important;
 }
 
 mat-grid-tile {
